--- a/wot-frontend/src/app/pages/data-overview/data-overview.component.html
+++ b/wot-frontend/src/app/pages/data-overview/data-overview.component.html
@@ -10,3 +10,8 @@
         </span>
     </div>
 </div>
+<wot-footer>
+    <wot-toolbar>
+      <wot-button slot="fill" >Weiter ></wot-button>
+    </wot-toolbar>
+</wot-footer>
