--- a/wot-frontend/src/app/pages/data-overview/data-overview.component.scss
+++ b/wot-frontend/src/app/pages/data-overview/data-overview.component.scss
@@ -5,7 +5,7 @@
     flex-direction: row;
 }
 .inner-content {
-    background-color: #303030;
+    background-color: black;
 }
 .img-data {
     margin: 2px;
