created basic page data-labeling

--- a/wot-frontend/src/app/pages/data-overview/data-overview.component.html
+++ b/wot-frontend/src/app/pages/data-overview/data-overview.component.html
@@ -12,6 +12,6 @@
 </div>
 <wot-footer>
     <wot-toolbar>
-      <wot-button slot="fill" >Weiter ></wot-button>
+      <wot-button slot="fill" (click)="continue()" >Weiter ></wot-button>
     </wot-toolbar>
 </wot-footer>
