--- a/wot-frontend/src/app/pages/data-labeling/data-labeling.component.scss
+++ b/wot-frontend/src/app/pages/data-labeling/data-labeling.component.scss
@@ -12,16 +12,40 @@
 
     display: inline-block;
 }
-.dragElement {
+.drag-container {
     background-color: blue;
     width: calc(var(--base-scale) * 10rem);
+    height: calc(var(--base-scale) * 10rem);
+    
+    position:absolute;
+    border: solid 1px #ccc;
+    color: rgba(0, 0, 0, 0.87);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
     cursor: move;
+    background: white;
+    font-size: 14px;
+    z-index: 100;
 }
-.dropElement {
-    background-color: red;
+.drop-folder {
     height: calc(var(--base-scale) * 10rem);
     width: calc(var(--base-scale) * 10rem);
     display: inline-block;
     margin-left: 5px;
     margin-right: 5px;
+}
+.drop-container {
+    position:relative;
+    flex-grow:1;
+    height: 500px;
+    width: 70%;
+    z-index: 1;
+}
+.drag-img {
+    width:100%;
+    height:100%;
+    object-fit:cover;
 }
