--- a/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
+++ b/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
@@ -3,20 +3,7 @@
         Der Computer hat weitere Bilder gefunden. Klassifiziere diese.
     </wot-header-title>
 </wot-header>
-<div cdkDropListGroup class="content" #dropZone>
-    <div cdkDropList class="drop-container" [cdkDropListSortingDisabled]="true" [cdkDropListData]="data">
-        <div *ngFor="let item of data" class="drag-container" [style.top.px]="item.y" [style.left.px]="item.x" [style.z-index]="item.z" (cdkDragDropped)="changePosition($event,item)" (cdkDragStarted)="changeZIndex(item)" cdkDrag>
-            <img src="{{item.image}}" class="drag-img"/>
-            <div *cdkDragPlaceholder></div>
-        </div>
-    </div>
-    <div class="footer content">
-        <div *ngFor="let class of label_classes" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="class.images" class="drop-folder">
-            <img src="assets/folder.png" style="width: 100%; height: 80%;"/>
-            {{class.class}}
-        </div>
-        <wot-toolbar>
-            <wot-button (click)="continue()" >Weiter ></wot-button>
-        </wot-toolbar>
-    </div>
-</div>
+<app-drag-and-drop [imagePaths]="imagePaths" [labelClasses]="labelClasses"></app-drag-and-drop>
+<wot-toolbar>
+    <wot-button (click)="continue()" >Weiter ></wot-button>
+</wot-toolbar>
