--- a/wot-frontend/src/app/pages/data-grouping/data-grouping.component.html
+++ b/wot-frontend/src/app/pages/data-grouping/data-grouping.component.html
@@ -3,7 +3,7 @@
         Zeige dem Computer, welche Objekte eine Gefahr für den Truck darstellen.
     </wot-header-title>
 </wot-header>
-<app-drag-and-drop [imagePaths]="imagePaths" [labelClasses]="labelClasses"></app-drag-and-drop>
+<app-drag-and-drop [imagePaths]="imagePaths" [labelClasses]="labelClasses" #dragDrop></app-drag-and-drop>
 <wot-toolbar>
-    <wot-button (click)="continue()" >Weiter ></wot-button>
+    <wot-button (click)="continue(dragDrop)" >Weiter ></wot-button>
 </wot-toolbar>
