--- a/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
+++ b/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
@@ -6,9 +6,9 @@
         </div>
     </div>
     <div class="footer content">
-        <div *ngFor="let class of labelClasses" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="class.images" class="drop-folder">
+        <div *ngFor="let class of labelClasses" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="class.childs" class="drop-folder">
             <img src="assets/folder.png" style="width: 100%; height: 80%;"/>
-            {{class.class}}
+            {{class.labelName}}
         </div>
     </div>
 </div>
