--- a/wot-frontend/src/app/pages/data-overview/data-overview.component.html
+++ b/wot-frontend/src/app/pages/data-overview/data-overview.component.html
@@ -1,12 +1,12 @@
 <wot-header>
     <wot-header-title>
-        Unsere fleißigen Inder haben auch Bilder von UFOs gemalt:
+        Der Computer hat Bilder von Objekten gesammelt, die uns in vergangenen Missionen begegnet sind:
     </wot-header-title>
 </wot-header>
 <div class="content">
     <div class="inner-content">
         <span *ngFor="let image of images">
-            <img class="img-data" src="{{image}}"/>   
+            <img class="img-data" src="{{image.imagePath}}"/>   
         </span>
     </div>
 </div>
