--- a/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
+++ b/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
@@ -1,12 +1,13 @@
-<div cdkDropListGroup class="content" #dropZone>
-    <div cdkDropList class="drop-container" [cdkDropListSortingDisabled]="true" [cdkDropListData]="data">
-        <div *ngFor="let item of data" class="drag-container" [style.top.px]="item.y" [style.left.px]="item.x" [style.z-index]="item.z" (cdkDragDropped)="changePosition($event,item)" (cdkDragStarted)="changeZIndex(item)" cdkDrag>
-            <img src="{{item.imagePath}}" height="{{item.height}}" width="{{item.width}}" class="drag-img"/>
+<div cdkDropListGroup class="body" #dropZone>
+    <div class="content" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="dragObjects" #dragZone>
+        <div *ngFor="let item of dragObjects" class="drag-item" cdkDragBoundary=".body" [style.top.px]="item.y" [style.left.px]="item.x" [style.z-index]="item.z" (cdkDragDropped)="changePosition($event,item)" (cdkDragStarted)="changeZIndex(item)" [style]="'height: ' + item.height + 'px; width: ' + item.width+'px;'" cdkDrag>
+            <img src="{{item.imagePath}}" class="drag-img"/>
+            <p class="class-label">{{item.label}}</p>
             <div *cdkDragPlaceholder></div>
         </div>
     </div>
-    <div class="footer content">
-        <div *ngFor="let class of labelClasses" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="class.childs" class="drop-folder">
+    <div class="footer">
+        <div *ngFor="let class of labels" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="class.children" class="drop-item">
             <img src="assets/folder.png" style="width: 100%; height: 80%;"/>
             {{class.labelName}}
         </div>
