--- a/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
+++ b/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
@@ -3,7 +3,7 @@
         Der Computer hat weitere Bilder gefunden. Klassifiziere diese.
     </wot-header-title>
 </wot-header>
-<app-drag-and-drop [data]="images" [labelClasses]="labelClasses" #dragDrop></app-drag-and-drop>
+<app-drag-and-drop [data]="images" [labels]="labels" #dragDrop></app-drag-and-drop>
 <wot-toolbar>
     <wot-button (click)="continue(dragDrop)" >Weiter ></wot-button>
 </wot-toolbar>
