--- a/wot-frontend/src/app/common/buttons/wot-button/wot-button.component.scss
+++ b/wot-frontend/src/app/common/buttons/wot-button/wot-button.component.scss
@@ -1,32 +1,61 @@
 .btn {
   padding: 1rem;
-  border-width: 2px;
-  border-style: solid;
-  border-radius: 0rem;
   text-decoration: none;
   font-weight: 700;
   font-size: 16px;
   letter-spacing: .08em;
   text-transform: uppercase;
   cursor: pointer;
-}
-
-.btn-block {
-  width: 100%;
-}
-
-.btn-right {
-  float: left;
-}
-
-.btn-icon {
-
-}
-
-.btn-text {
+  background: linear-gradient(45deg, #014B59, #023947);
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
 }
 
 ion-icon {
   --ionicon-stroke-width: 64px;
   font-size: 24px;
+}
+
+.btn::before {
+  background: #fff;
+  content: "";
+  height: 155px;
+  opacity: 0;
+  position: absolute;
+  top: -50px;
+  transform: rotate(35deg);
+  width: 20px;
+  transition: all 1000ms cubic-bezier(0.19, 1, 0.22, 1);
+  left: -60%;
+}
+
+.btn::after {
+  background: #fff;
+  content: "";
+  height: 20rem;
+  opacity: 0;
+  position: absolute;
+  top: -100px;
+  transform: rotate(35deg);
+  transition: all 1000ms cubic-bezier(0.19, 1, 0.22, 1);
+  width: 6rem;
+  left: -50%;
+}
+
+.btn:hover {
+  transform: translateY(0);
+  background-image: linear-gradient(45deg, #005C6B, #0e97aa);
+}
+
+.btn:active::before {
+  left: 160%;
+  opacity: 0.2;
+}
+
+.btn:active::after {
+  left: 170%;
+  opacity: 0.3;
+}
+.btn span {
+  z-index: 20;
 }
