--- a/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
+++ b/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
@@ -1,15 +1,15 @@
 <div cdkDropListGroup class="body" #dropZone>
-    <div class="content" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="dragObjects" #dragZone>
-        <div *ngFor="let item of dragObjects" class="drag-item" cdkDragBoundary=".body" [style.top.px]="item.y" [style.left.px]="item.x" [style.z-index]="item.z" (cdkDragDropped)="changePosition($event,item)" (cdkDragStarted)="changeZIndex(item)" [style]="'height: ' + item.height + 'px; width: ' + item.width+'px;'" cdkDrag>
-            <img src="{{item.imagePath}}" class="drag-img"/>
-            <p class="class-label">{{item.label}}</p>
-            <div *cdkDragPlaceholder></div>
-        </div>
+  <div class="content" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="dragObjects" #dragZone>
+    <div *ngFor="let item of dragObjects" class="drag-item" cdkDragBoundary=".body" [style.top.px]="item.y" [style.left.px]="item.x" [style.z-index]="item.z" (cdkDragDropped)="changePosition($event,item)" (cdkDragStarted)="changeZIndex(item)" [style]="'height: ' + item.height + 'px; width: ' + item.width+'px;'" cdkDrag>
+      <img src="{{item.imagePath}}" class="drag-img"/>
+      <p class="class-label">{{item.label}}</p>
+      <div *cdkDragPlaceholder></div>
     </div>
-    <div class="footer">
-        <div *ngFor="let class of labels" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="class.children" class="drop-item">
-            <img src="assets/folder.png" style="width: 100%; height: 80%;"/>
-            {{class.labelName}}
-        </div>
+  </div>
+  <div class="categories">
+    <div *ngFor="let class of labels" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="class.children" class="category">
+      <ion-icon name="folder-open-outline" class="btn-icon"></ion-icon>
+      {{class.labelName}}
     </div>
+  </div>
 </div>
