--- a/wot-frontend/src/app/pages/data-overview/data-overview.component.scss
+++ b/wot-frontend/src/app/pages/data-overview/data-overview.component.scss
@@ -29,12 +29,12 @@
 .img-data {
   border-radius: 0;
   width: 148px;
-  background-image: linear-gradient(45deg, #020D17, #041623);
+  background: linear-gradient(45deg, #020D17, #041623);
   border: #7F7764 solid 1px;
 }
 
 .img-data:hover {
-  background-image: linear-gradient(45deg, #020D17, #023947);
+  background: linear-gradient(45deg, #020D17, #023947);
   border: #7F7764 solid 1px;
 }
 
