restyled data-creation

--- a/wot-frontend/src/app/pages/data-creation/data-creation.component.html
+++ b/wot-frontend/src/app/pages/data-creation/data-creation.component.html
@@ -1,29 +1,37 @@
-<wot-header>
-  <wot-header-title>
-    Schritt 1: Zeichne Objekte, um den Computer zu zeigen, wie diese aussehen.
-  </wot-header-title>
-</wot-header>
-<div class="content">
-  <div class="inner-content">
-    <p *ngIf="images.length < 4">Zeichne vier von den Objekten Asteroid, Astronaut, Brief, Ufo, Versorgungsbox, Auto, Satellit, SatellitenschÃ¼ssel oder Raumschiff</p>
-    <p *ngIf="images.length >= 4">Danke</p>
-    <div class="drawing-canvas" *ngIf="images.length < 4">
-      <ngx-drawing-canvas [width]="'100%'" [height]="'100%'" strokeColor="#fff" backgroundColor="#121212" #drawingCanvas></ngx-drawing-canvas>
-      <div>
-        <wot-button icon="arrow-undo" (click)="drawingCanvas.undoLast()" [disabled]="!drawingCanvas.canUndo()"></wot-button>
-        <wot-button icon="arrow-redo" (click)="drawingCanvas.redoLast()" [disabled]="!drawingCanvas.canRedo()"></wot-button>
-        <wot-button icon="checkmark" (click)="saveCanvas(drawingCanvas)" (click)="drawingCanvas.clear()" [disabled]="images.length >= 3"></wot-button>
+<wot-page>
+  <wot-step-info>
+    <wot-step-title>
+      Schritt 2: Datensatz-Erstellung
+    </wot-step-title>
+    <wot-step-description>
+      Zeichne Objekte, um den Computer zu zeigen, wie diese aussehen. Zeichne vier von den Objekten Asteroid, Astronaut, Brief, Ufo, Versorgungsbox, Auto, Satellit, Satellitenschüssel oder Raumschiff
+    </wot-step-description>
+  </wot-step-info>
+  <wot-row>
+    <div class="inner-content">
+      <div class="canvas-group">
+        <div class="drawing-canvas">
+          <wot-container>
+            <ngx-drawing-canvas [width]="'512'" [height]="'512'" strokeColor="#fff" backgroundColor="rgba(0, 0, 0, 0)" #drawingCanvas></ngx-drawing-canvas>
+          </wot-container>
+        </div>
+        <div class="canvas-buttons">
+          <wot-button icon="arrow-undo" (click)="drawingCanvas.undoLast()" [disabled]="!drawingCanvas.canUndo()"></wot-button>
+          <wot-button icon="arrow-redo" (click)="drawingCanvas.redoLast()" [disabled]="!drawingCanvas.canRedo()"></wot-button>
+          <wot-button icon="checkmark" (click)="saveCanvas(drawingCanvas)" [disabled]="images.length >= 3"></wot-button>
+        </div>
+      </div>
+
+      <div class="image-list">
+        <div class="image-item" *ngFor="let image of images">
+          <wot-container>
+            <img width="100%" src="{{image.imagePath}}"/>
+          </wot-container>
+        </div>
       </div>
     </div>
-  </div>
-  <wot-sidebar>
-    <div class="image-list">
-      <div style="padding: 1rem 2rem 0 2rem" *ngFor="let image of images">
-        <img width="100%" style="border: 2px solid #fff; border-radius: 0" src="{{image.imagePath}}"/>
-      </div>
-    </div>
-    <wot-toolbar>
-      <wot-button slot="fill" [disabled]="images.length < 3" (click)="continue()" >Weiter ></wot-button>
-    </wot-toolbar>
-  </wot-sidebar>
-</div>
+  </wot-row>
+  <wot-row>
+    <wot-button slot="right" [disabled]="images.length < 3" (click)="continue()">Zum nächsten Schritt</wot-button>
+  </wot-row>
+</wot-page>
