--- a/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.scss
+++ b/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.scss
@@ -6,12 +6,16 @@
 }
 
 .categories {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   color: white;
 }
 
 .category {
   width: 20rem;
-  margin: 0.8rem 0;
+  margin: 0.4rem 0;
   padding: 1rem;
   text-decoration: none;
   font-weight: 700;
