WIP: added success screens

--- a/wot-frontend/src/app/common/buttons/wot-button/wot-button.component.html
+++ b/wot-frontend/src/app/common/buttons/wot-button/wot-button.component.html
@@ -1,4 +1,12 @@
-<a href="#" onclick="return false;" class="btn butn butn__new" [style.padding]="icon ? '0.7rem' : '1rem'" [style.display]="getDisplayStyle()" [style.float]="getFloatStyle()" [style.background]="getBackground()" [style.color]="getColorStyle()" [style.border-color]="getColorStyle()">
+<a href="#" onclick="return false;" class="btn butn butn__new"
+   [style.padding]="icon ? '0.7rem' : '1rem'"
+   [style.display]="getDisplayStyle()"
+   [style.float]="getFloatStyle()"
+   [style.background]="getBackground()"
+   [style.color]="getColorStyle()"
+   [style.border-color]="getColorStyle()"
+   [style.cursor]="getCursor()"
+>
   <span>
     <ng-content *ngIf="!icon"></ng-content>
     <ion-icon name="{{icon}}" class="btn-icon" *ngIf="icon"></ion-icon>
