--- a/wot-frontend/src/app/common/layout/wot-step-info/wot-step-info.component.scss
+++ b/wot-frontend/src/app/common/layout/wot-step-info/wot-step-info.component.scss
@@ -5,3 +5,17 @@
   align-items: center;
   flex-direction: column;
 }
+
+.wot-step-info ::ng-deep h1,h2,h3,h4,h5,h6 {
+  margin: 6px;
+  color: #9F7426;
+  text-align: center;
+}
+
+.wot-step-info ::ng-deep p {
+  margin: 6px;
+  color: #7F7764;
+  text-align: center;
+  font-size: 1.5em;
+}
+
