--- a/wot-frontend/src/app/pages/data-grouping/data-grouping.component.html
+++ b/wot-frontend/src/app/pages/data-grouping/data-grouping.component.html
@@ -1,16 +1,20 @@
 <wot-page>
   <wot-step-info>
-    <wot-step-title>
+    <h1>
       Schritt 4: Gruppieren
-    </wot-step-title>
-    <wot-step-description>
+    </h1>
+    <p>
       Zeige dem Computer, welche Objekte eine Gefahr für den Truck darstellen.
-    </wot-step-description>
+    </p>
   </wot-step-info>
   <wot-row>
     <app-drag-and-drop [data]="images" [labels]="labels" #dragDrop></app-drag-and-drop>
   </wot-row>
   <wot-row>
-    <wot-button slot="right" (click)="continue(dragDrop)">Zum nächsten Schritt</wot-button>
+    <wot-button slot="right" (click)="done(dragDrop)">Schritt abschließen</wot-button>
   </wot-row>
 </wot-page>
+
+<wot-success-overlay (continue)="continue()" #successOverlay>
+  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+</wot-success-overlay>
