--- a/wot-frontend/src/app/pages/data-overview/data-overview.component.html
+++ b/wot-frontend/src/app/pages/data-overview/data-overview.component.html
@@ -1,11 +1,11 @@
 <wot-page width='fit-content'>
   <wot-step-info>
-    <wot-step-title>
+    <h1>
       Schritt 1: Übersicht
-    </wot-step-title>
-    <wot-step-description>
+    </h1>
+    <p>
       Der Computer hat Bilder von Objekten gesammelt, die uns in vergangenen Missionen begegnet sind:
-    </wot-step-description>
+    </p>
   </wot-step-info>
   <wot-row>
     <wot-container>
@@ -19,6 +19,10 @@
     </wot-container>
   </wot-row>
   <wot-row>
-    <wot-button slot="right" (click)="continue()">Zum nächsten Schritt</wot-button>
+    <wot-button slot="right" (click)="done()">Schritt abschließen</wot-button>
   </wot-row>
 </wot-page>
+
+<wot-success-overlay (continue)="continue()" #successOverlay>
+  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+</wot-success-overlay>
