--- a/wot-frontend/src/app/common/layout/wot-success-overlay/wot-success-overlay.component.scss
+++ b/wot-frontend/src/app/common/layout/wot-success-overlay/wot-success-overlay.component.scss
@@ -1,4 +1,4 @@
-.wot-overlay {
+.landing-page {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -13,12 +13,12 @@
   flex-direction: row;
 }
 
-.wot-overlay ::ng-deep h1,h2,h3,h4,h5,h6 {
-  margin: 6px;
+.landing-page ::ng-deep h1,h2,h3,h4,h5,h6 {
+  margin: 6px 0;
 }
 
-.wot-overlay ::ng-deep p {
-  margin: 6px;
+.landing-page ::ng-deep p {
+  margin: 6px 0;
   font-size: 1.5em;
 }
 
