--- a/wot-frontend/src/app/common/layout/wot-success-overlay/wot-success-overlay.component.html
+++ b/wot-frontend/src/app/common/layout/wot-success-overlay/wot-success-overlay.component.html
@@ -1,4 +1,4 @@
-<div class="wot-overlay" [style.visibility]="visible ? 'visible' : 'hidden'">
+<div class="wot-overlay" *ngIf="visible">
   <div class="success-checkmark">
     <div class="check-icon">
       <span class="icon-line line-tip"></span>
