--- a/wot-frontend/src/app/pages/data-creation/data-creation.component.html
+++ b/wot-frontend/src/app/pages/data-creation/data-creation.component.html
@@ -4,7 +4,7 @@
       Schritt 2: Datensatz-Erstellung
     </h1>
     <p>
-      Zeichne Objekte, um den Computer zu zeigen, wie diese aussehen. Zeichne vier von den Objekten Asteroid, Astronaut, Brief, Ufo, Versorgungsbox, Auto, Satellit, Satellitenschüssel oder Raumschiff
+      Zeichnet im Team vier von den Objekten: Asteroid, Astronaut, Brief, Ufo, Versorgungsbox, Auto, Satellit, Satellitenschüssel oder Raumschiff.
     </p>
   </wot-step-info>
   <wot-row>
@@ -37,5 +37,5 @@
 </wot-page>
 
 <wot-success-overlay (continue)="continue()" #successOverlay>
-  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+  Super! Mit den von euch gezeichneten Bildern habt ihr den vorliegenden Datensatz erweitert. Das hilft der KI dabei, ein größeres Spektrum von Objektvarianten zu erkennen.
 </wot-success-overlay>
