--- a/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
+++ b/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
@@ -1,10 +1,10 @@
 <wot-page>
   <wot-step-info>
     <h1>
-      Schritt 3: Labeling
+      Schritt 3: Klassifizierung
     </h1>
     <p>
-      Der Computer hat weitere Bilder gefunden. Klassifiziere diese.
+      Um die Objekte zuordnen zu können ist es nun wichtig diesen eine Kategorie zuzuweisen. Ordne dafür die Objekte in die unten stehenden Kacheln ein.
     </p>
   </wot-step-info>
   <wot-row>
@@ -16,5 +16,5 @@
 </wot-page>
 
 <wot-success-overlay (continue)="continue()" #successOverlay>
-  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+  Super! Ihr habt den Objektenzeichnungen eine Kategorie zugewiesen. Die KI kann nun darauf trainiert werden Zeichnungen eine Kategorie zuzuordnen.
 </wot-success-overlay>
