--- a/wot-frontend/src/app/pages/data-overview/data-overview.component.html
+++ b/wot-frontend/src/app/pages/data-overview/data-overview.component.html
@@ -4,7 +4,7 @@
       Schritt 1: Übersicht
     </h1>
     <p>
-      Der Computer hat Bilder von Objekten gesammelt, die uns in vergangenen Missionen begegnet sind:
+      Der Computer hat Bilder von Objekten gesammelt, die uns in vergangenen Missionen begegnet sind.
     </p>
   </wot-step-info>
   <wot-row>
@@ -24,5 +24,5 @@
 </wot-page>
 
 <wot-success-overlay (continue)="continue()" #successOverlay>
-  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+  Super! Ihr habt euch mit den verschiedenen Objekten im Weltall vertraut gemacht. Nun könnt ihr das Erkennungssystem entwickeln.
 </wot-success-overlay>
