--- a/wot-frontend/src/app/pages/landing/landing.component.html
+++ b/wot-frontend/src/app/pages/landing/landing.component.html
@@ -7,10 +7,10 @@
         Willkommen an der KI-Station. Hier sollst du lernen was hinter den Begriff Künstliche Intelligenz steckt.
       </p>
       <p>
-        Nach den neuste Umbauten am Truck kann dieser nun auch durch das Weltall fliegen. Zu den Umbauten zählen Düsenantriebe, sowie ein Erkennungssystem für Objekte die Weltall herumfliegen.
+        Nach den neuste Umbauten am Truck kann dieser auch durch das Weltall fliegen. Zu den Umbauten zählen Düsenantriebe, sowie ein Erkennungssystem für Objekte die Weltall herumfliegen.
       </p>
       <p>
-        Nun soll der Truck auf Erkundungstour gehen, um neue Welten zu entdecken. Das Problem ist nun, dass das Erkennungssystem bis jetzt nicht  zwischen Objekte unterscheiden kann. Unterstütze nun das Truck Team dieses Erkennungssystem zu trainieren, um mögliche Gefahren abzuwenden und einen sichere Mission zu ermöglichen.
+        Nun soll der Truck auf Erkundungstour gehen, um neue Welten zu entdecken. Das Problem ist, dass das Erkennungssystem bis jetzt nicht zwischen Objekte unterscheiden kann. Unterstütze das Truck Team dieses Erkennungssystem zu trainieren, um mögliche Gefahren abzuwenden und einen sichere Mission zu ermöglichen.
       </p>
     </wot-row>
     <wot-row>
